--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -31,24 +31,38 @@
     </div>
 }
 
-<main class="container">
-    <div class="p-4 p-md-5 mb-4 text-white rounded text-center custom-background">
+<div class="container">
+    <div class="pt-0 p-4 p-md-5 mb-4 text-white rounded text-center custom-background">
         <div class="col-md-6 mx-auto">
-            <h1><img src="/white-logo-horizontal.png" alt="" id="logo"></h1>
+            <h1 class="pt-3"><img src="/white-logo-horizontal.png" alt="" id="logo"></h1>
             <p class="lead my-3">Together, we stand stronger in the face of adversity.</p>
         </div>
     </div>
 
-    <div class="row g-5">
+    <div class="row g-2">
         <div class="col-md-8">
-            <h2 class ="pb-2 border-bottom">About Us</h2>
-            <article class="about-us">
-                <p>
-                    In response to the evolving challenges faced by disaster responders, Agapay Aid emerges as a pioneering solution inspired by the growing need for efficiency and precision in disaster relief efforts. Stemming from the lessons learned from the DSWD's Disaster Assistance Family Access Card (DAFAC) and acknowledging the drawbacks of paper-based systems, Agapay Aid steps forward as a transformative web-based application.
-                    <br /> <br />
-                    Initially designed to enhance the DSWD's profiling tool, Agapay Aid envisions a future where disaster relief is not hindered by administrative bottlenecks. The heart of our mission lies in streamlining the intricate web of tasks involved in managing evacuation centers, assigning staff, and ensuring the fair distribution of relief goods. Our web-based platform aims to alleviate the burdens of paperwork, limited coverage, and information management challenges faced by traditional systems.
-                </p>
-            </article>
+            <div class="container">
+                <h2 class="pb-2 border-bottom">About Us</h2>
+                <article class="about-us">
+                    <p>
+                        In response to the evolving challenges faced by disaster responders, Agapay Aid emerges as a pioneering solution inspired by the growing need for efficiency and precision in disaster relief efforts. Stemming from the lessons learned from the DSWD's Disaster Assistance Family Access Card (DAFAC) and acknowledging the drawbacks of paper-based systems, Agapay Aid steps forward as a transformative web-based application.
+                        <br /> <br />
+                        Initially designed to enhance the DSWD's profiling tool, Agapay Aid envisions a future where disaster relief is not hindered by administrative bottlenecks. The heart of our mission lies in streamlining the intricate web of tasks involved in managing evacuation centers, assigning staff, and ensuring the fair distribution of relief goods. Our web-based platform aims to alleviate the burdens of paperwork, limited coverage, and information management challenges faced by traditional systems.
+                    </p>
+                </article>
+            </div>
+
+            <div class="container">
+                <h3 class="pb-2 border-bottom">Our Mission</h3>
+                <article class="our-mission">
+                    <p>
+                        Our mission is to enhance the efficiency of evacuation center management and relief distribution, ensuring swift and equitable support for every affected individual.
+                        We strive to provide real-time tracking, comprehensive evacuee management, and streamlined relief distribution.
+                        By automating processes and centralizing information, AgapayAid aims to empower disaster responders with the tools they need to make a meaningful impact during critical times.
+                    </p>
+                </article>
+
+            </div>
         </div>
 
         <div class="col-md-4">
@@ -66,7 +80,7 @@
 
     <br />
 
-    <div class="row g-4 text-center">
+    <div class="row g-4 text-center container">
         <h2 class="pb-2 border-bottom">Meet the Team</h2>
 
         <div class="col-lg-3 col-md-6">
@@ -93,29 +107,33 @@
             <p>Back-end Developer</p>
         </div>
     </div>
-</main>
 
-<div class="row align-items-center g-lg-5 py-5">
-    <div class="mx-auto col-lg-6">
-        <div class="p-3 p-md-4 border rounded-3 bg-primary text-white">
-            <div class="row mb-2">
-                <h6 class="text-white"><i class="bi bi-envelope-fill pe-2"></i><b>Email address:</b></h6>
-                <p>agapayaidproject@gmail.com</p>
-            </div>
+    <br />
 
-            <div class="row">
-                <h6 class="text-white"><i class="bi bi-telephone-fill pe-2"></i><b>Contact Number:</b></h6>
-                <p>+2093482923</p>
+    <div class="row align-items-center p-3 border rounded-3 bg-primary text-white container">
+        <div class="col-lg-6 text-start">
+            <h2 class="text-white pb-2 border-bottom">Contact Us</h2>
+            <p class="col-lg-10">
+                We appreciate your interest in connecting with us. If you have any inquiries, feedback, or collaboration proposals,
+                please feel free to reach out to us through the following contacts:
+            </p>
+        </div>
+
+        <br />
+
+        <div class="mx-auto col-lg-6">
+            <div class="text-start">
+                <div class="row pt-3">
+                    <h6 class="text-white"><i class="bi bi-envelope-fill pe-2"></i><b>Email address:</b></h6>
+                    <p>agapayaidproject@gmail.com</p>
+                </div>
+
+                <div class="row">
+                    <h6 class="text-white"><i class="bi bi-telephone-fill pe-2"></i><b>Contact Number:</b></h6>
+                    <p>+20934829ere23</p>
+                </div>
             </div>
         </div>
-    </div>
-
-    <div class="col-lg-6 text-center text-lg-start">
-        <h2 class="pb-2 border-bottom">Contact Us</h2>
-        <p class="col-lg-10">
-            We appreciate your interest in connecting with us. If you have any inquiries, feedback, or collaboration proposals,
-            please feel free to reach out to us through the following contacts:
-        </p>
     </div>
 </div>
 
