--- a/Pages/EvacuationCenter/Profile.cshtml
+++ b/Pages/EvacuationCenter/Profile.cshtml
@@ -283,7 +283,7 @@
 	$(document).ready(function () {
 		var table = $('#distribution-table').DataTable({
 			responsive: true,
-			pageLength: 100;
+			pageLength: 100,
 			columnDefs: [
 				{ "orderable": true, "targets": [0, 1, 4] }, // Sortable columns
 				{ "orderable": false, "targets": [2, 3, 5] } // Non-sortable columns
