--- a/Pages/Disaster/Profile/reliefgoodspack/View.cshtml
+++ b/Pages/Disaster/Profile/reliefgoodspack/View.cshtml
@@ -144,7 +144,7 @@
     $(document).ready(function () {
         var table = $('#pack-inclusion').DataTable({
             responsive: true,
-            pageLength: 100;
+            pageLength: 100,
             columnDefs: [
                 { "orderable": true, "targets": [0, 1, 3, 4, 5] }, // Sortable columns
                 { "orderable": false, "targets": [2] } // Non-sortable columns
