--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -138,7 +138,7 @@
 	$(document).ready(function () {
 		var table = $('#center-table').DataTable({
 			responsive: true,
-			pageLength: 100;
+			pageLength: 100,
 			columnDefs: [
 				{ "orderable": true, "targets": [0, 1, 4] }, // Sortable columns
 				{ "orderable": false, "targets": [3, 2, 5, 6] } // Non-sortable columns
