--- a/Pages/Family/Profile/Index.cshtml
+++ b/Pages/Family/Profile/Index.cshtml
@@ -218,7 +218,7 @@
 	$(document).ready(function () {
 		var table = $('#eclog-table').DataTable({
 			responsive: true,
-			pageLength: 100;
+			pageLength: 100,
 			columnDefs: [
 				{ "orderable": true, "targets": [0, 1, 5] }, // Sortable columns
 				{ "orderable": false, "targets": [2, 3, 4, 6] } // Non-sortable columns
