--- a/Pages/disaster/profile/reliefgoodspack/Index.cshtml
+++ b/Pages/disaster/profile/reliefgoodspack/Index.cshtml
@@ -271,7 +271,7 @@
 	$(document).ready(function () {
 		var table = $('#reliefpack-table').DataTable({
 			responsive: true,
-			pageLength: 100;
+			pageLength: 100,
 			columnDefs: [
 				{ "orderable": true, "targets": [0, 1, 3] }, // Sortable columns
 				{ "orderable": false, "targets": [2, 4, 5, 6] }, // Non-sortable columns
