--- a/Pages/Family/Index.cshtml
+++ b/Pages/Family/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@page
 @model AgapayAidSystem.Pages.Family.IndexModel
 @{
-
 	ViewData["Title"] = "Family";
 }
 
@@ -62,29 +61,29 @@
 	}
 </style>
 
-<div class="content">
-	<!-- Breadcrumb -->
-	<div class="row pb-2" aria-label="breadcrumb">
-		<nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
-			<ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
-				<li class="breadcrumb-item active"><a><strong>Family</strong></a></li>
-			</ol>
-		</nav>
-	</div>
 
-	<!-- Title and Add Button -->
-	<div class="row p-2">
+<!-- Breadcrumb -->
+<div class="row pb-2" aria-label="breadcrumb">
+	<nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
+		<ol class="breadcrumb">
+			<li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
+			<li class="breadcrumb-item active"><a><strong>Family</strong></a></li>
+		</ol>
+	</nav>
+</div>
+
+<!-- Title and Add Button -->
+<div class="row mb-2">
+	<form method="POST">
 		<div class="col-12 d-flex align-items-center justify-content-between">
 			<h1><i class="bi bi-people-fill" style="padding: 0 5px 0 5px;"></i>Family</h1>
+
 			<div class="d-flex justify-content-end align-items-center">
-				<form method="POST">
-					<a class="btn btn-primary mb-2 button-spacing d-none d-sm-inline" href="#" id="importCsvButton">
-						<i class="bi bi-box-arrow-up"></i> Upload CSV
-					</a>
-					<input type="file" id="csvInput" accept=".csv" style="display:none" onchange="handleFile()" />
-				</form>
-				
+				<a class="btn btn-primary mb-2 button-spacing d-none d-sm-inline" href="#" id="importCsvButton">
+					<i class="bi bi-box-arrow-up"></i> Upload CSV
+				</a>
+				<input type="file" id="csvInput" accept=".csv" style="display:none" onchange="handleFile()" />
+
 				<a class="btn btn-primary mb-2 d-none d-sm-inline" href="/family/add/index">
 					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Family
 				</a>
@@ -97,49 +96,48 @@
 				</a>
 			</div>
 		</div>
-	</div>
-
-	<!-- Table -->
-	<div class="row p-2">
-		<div class="col-lg-12">
-			<table id="family-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
-				<thead>
-					<tr style="vertical-align: top;">
-						<th>#</th>
-						<th>Serial Number</th>
-						<th>Name of Family Head</th>
-						<th>Barangay</th>
-						<th>City/Municipality</th>
-						<th style="text-align: center;">Family Size</th>
-						<th></th>
-					</tr>
-				</thead>
-
-				<tbody>
-					@{ var counter = 1; }
-					@foreach (var item in Model.listFamily)
-					{
-						<tr>
-							<td width="5%">@counter</td>
-							<td width="20%">@item.serialNum</td>
-							<td width="25%">@item.familyHead</td>
-							<td width="15%">@item.barangayName</td>
-							<td width="20%">@item.municipalityCity</td>
-							<td width="5%" style="text-align: center;">@item.familySize</td>
-							<td width="5%">
-								<a class="btn btn-success edit-button" href="/family/profile/index?familyID=@item.familyID">
-									View
-								</a>
-							</td>
-						</tr>
-						counter++;
-					}
-				</tbody>
-			</table>
-		</div>
-	</div>
+	</form>
 </div>
 
+<!-- Table -->
+<div class="row">
+	<table id="family-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+		<thead>
+			<tr style="vertical-align: top;">
+				<th>#</th>
+				<th>Serial Number</th>
+				<th>Name of Family Head</th>
+				<th>Barangay</th>
+				<th>City/Municipality</th>
+				<th style="text-align: center;">Family Size</th>
+				<th></th>
+			</tr>
+		</thead>
+
+		<tbody>
+			@{
+				var counter = 1;
+			}
+			@foreach (var item in Model.listFamily)
+			{
+				<tr>
+					<td width="5%">@counter</td>
+					<td width="20%">@item.serialNum</td>
+					<td width="25%">@item.familyHead</td>
+					<td width="15%">@item.barangayName</td>
+					<td width="20%">@item.municipalityCity</td>
+					<td width="5%" style="text-align: center;">@item.familySize</td>
+					<td width="5%">
+						<a class="btn btn-success edit-button" href="/family/profile/index?familyID=@item.familyID">
+							View
+						</a>
+					</td>
+				</tr>
+				counter++;
+			}
+		</tbody>
+	</table>
+</div>
 
 <script>
 <!--Making the table responsive-- >
