Minor changes in about page

--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -68,7 +68,7 @@
         <div class="col-md-4">
             <div style="top: 2rem;">
                 <div class="p-4 bg-light border rounded-3" style="vertical-align:middle">
-                    <h2 class="fst-italic pb-1">Do you know?</h2>
+                    <h3 class="pb-1">Did you know that...</h3>
                     <p class="mb-0">
                         In 2022, the World Risk Report listed the <b>Philippines as the 1st most disaster-prone country</b> because of its high risk, exposure, and vulnerability to
                         natural catastrophes and calamities such as earthquakes, typhoons, storm surges, tsunamis, volcanic eruptions, and flooding.
@@ -130,7 +130,7 @@
 
                 <div class="row">
                     <h6 class="text-white"><i class="bi bi-telephone-fill pe-2"></i><b>Contact Number:</b></h6>
-                    <p>+20934829ere23</p>
+                    <p>(+63) 927 161 9247</p>
                 </div>
             </div>
         </div>
