--- a/Pages/Disaster/Profile/reliefgoodspack/View.cshtml
+++ b/Pages/Disaster/Profile/reliefgoodspack/View.cshtml
@@ -36,43 +36,114 @@
 <div class="container-fluid">
 	<input type="hidden" name="centerLogID" value="@Model.logInfo.centerLogID" />
 	<div class="row">
-		<!-- Sidebar (desktop) -->
-		<nav id="sidebar" class="col-md-3 col-lg-3 d-md-block d-none sidebar">
-			<div class="position-sticky">
-				<ul class="nav flex-column">
-					<li class="nav-item">
-						<a class="nav-link" href="/disaster/profile/informationboard/index?centerLogID=@Model.logInfo.centerLogID">Information Board</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Entry Log</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/disaster/profile/staffassignment/index?centerLogID=@Model.logInfo.centerLogID">Staff Assignment</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">Inventory</a>
-					</li>
-					<li class="nav-item">
-                        <a class="nav-link active" href="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">Relief Goods Pack <span class="badge rounded-pill bg-primary ps-2">1</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/disaster/profile/vulnerabilityassessment/index?centerLogID=@Model.logInfo.centerLogID">Vulnerability Assessment</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
+        <!-- Sidebar (desktop) -->
+        <nav id="sidebar" class="col-md-3 col-lg-3 d-md-block d-none sidebar">
+            <div class="position-sticky">
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/disaster/profile/informationboard/index?centerLogID=@Model.logInfo.centerLogID">Information Board</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Entry Log</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/disaster/profile/staffassignment/index?centerLogID=@Model.logInfo.centerLogID">Staff Assignment</a>
+                    </li>
+                    @if (@Model.GetRemainingInventoryCount() == 0)
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" href="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">
+                                Inventory
+                            </a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" href="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">
+                                Inventory <span class="badge rounded-pill bg-primary ps-2">@Model.GetRemainingInventoryCount()</span>
+                            </a>
+                        </li>
+                    }
 
-		<!-- Sidebar (mobile) -->
-		<div id="sidebarMobile" class="col-md-3 col-lg-3 d-md-none bg-light p-2">
-			<select class="form-select" id="pageSelect">
-				<option value="/disaster/profile/informationboard/index?centerLogID=@Model.logInfo.centerLogID">Information Board</option>
-				<option value="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Entry Log</option>
-				<option value="/disaster/profile/staffassignment/index?centerLogID=@Model.logInfo.centerLogID">Staff Assignment</option>
-				<option value="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">Inventory</option>
-                <option value="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID" selected>Relief Goods Pack<span class="badge rounded-pill bg-primary ps-2"> (1 remaining pack/s)</span></option>
-				<option value="/disaster/profile/vulnerabilityassessment/index?centerLogID=@Model.logInfo.centerLogID">Vulnerability Assessment</option>
-			</select>
-		</div>
+                    @if (@Model.GetRemainingPackCount() == 0)
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">
+                                Relief Goods Pack
+                            </a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">
+                                Relief Goods Pack <span class="badge rounded-pill bg-primary ps-2">@Model.GetRemainingPackCount()</span>
+                            </a>
+                        </li>
+                    }
+
+                    @if (@Model.GetRemainingAssessmentCount() == 0)
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" href="/disaster/profile/vulnerabilityassessment/index?centerLogID=@Model.logInfo.centerLogID">
+                                Vulnerability Assessment
+                            </a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" href="/disaster/profile/vulnerabilityassessment/index?centerLogID=@Model.logInfo.centerLogID">
+                                Vulnerability Assessment <span class="badge rounded-pill bg-primary ps-2">@Model.GetRemainingAssessmentCount()</span>
+                            </a>
+                        </li>
+                    }
+                </ul>
+            </div>
+        </nav>
+
+        <!-- Sidebar (mobile) -->
+        <div id="sidebarMobile" class="col-md-3 col-lg-3 d-md-none bg-light p-2">
+            <select class="form-select" id="pageSelect">
+                <option value="/disaster/profile/informationboard/index?centerLogID=@Model.logInfo.centerLogID">Information Board</option>
+                <option value="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Entry Log</option>
+                <option value="/disaster/profile/staffassignment/index?centerLogID=@Model.logInfo.centerLogID">Staff Assignment</option>
+                @if (@Model.GetRemainingInventoryCount() == 0)
+                {
+                    <option value="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">Inventory</option>
+                }
+                else
+                {
+                    <option value="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">
+                        Inventory <span>(@Model.GetRemainingInventoryCount())</span>
+                    </option>
+                }
+
+                @if (@Model.GetRemainingPackCount() == 0)
+                {
+                    <option value="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">Relief Goods Pack</option>
+                }
+                else
+                {
+                    <option value="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">
+                        Relief Goods Pack <span>(@Model.GetRemainingPackCount())</span>
+                    </option>
+                }
+
+                @if (@Model.GetRemainingAssessmentCount() == 0)
+                {
+                    <option value="/disaster/profile/vulnerabilityassessment/index?centerLogID=@Model.logInfo.centerLogID">Vulnerability Assessment</option>
+                }
+                else
+                {
+                    <option value="/disaster/profile/vulnerabilityassessment/index?centerLogID=@Model.logInfo.centerLogID">
+                        Vulnerability Assessment <span>(@Model.GetRemainingAssessmentCount())</span>
+                    </option>
+                }
+
+            </select>
+        </div>
 
         <!-- Page Content -->
         <div class="col-md-9 ms-sm-auto col-lg-9 px-md-4 pb-3 pt-3">
