--- a/Pages/Disaster/Profile/informationboard/Index.cshtml
+++ b/Pages/Disaster/Profile/informationboard/Index.cshtml
@@ -177,34 +177,16 @@
                     </nav>
                 </div>
 
-                <!-- Title and Close Button -->
-                <form method="POST" id="closeEC" style="padding: 0px;">
-                    <input type="hidden" name="centerLogID" value="@Model.logInfo.centerLogID" />
-                    <input type="hidden" name="disasterID" value="@Model.logInfo.disasterID" />
-                    <input type="hidden" name="centerName" value="@Model.logInfo.centerName" />
-                    <div class="row pb-2">
-                        <div class="col-12 d-flex align-items-center justify-content-between">
-                            <div class="d-flex align-items-center">
-                                <h1>@Model.logInfo.centerName</h1>
-                            </div>
-                            @if (@Model.logInfo.status == "Open")
-                            {
-                                <div class="col-auto d-flex justify-content-between align-items-center" style="gap: 5px">
-                                    <button id="completeButton" type="button" class="btn btn-danger mb-2 d-none d-sm-inline" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal">
-                                        <i class="bi bi-x-circle pt" style="padding: 5px;"></i> Close EC
-                                    </button>
-                                    <button id="completeButtonSmall" type="button" class="btn btn-danger mb-2 d-sm-none" name="saveSelectionSmall" data-bs-toggle="modal" data-bs-target="#confirmSaveModal">
-                                        <i class="bi bi-x-circle pt" style="padding: 5px;"></i>
-                                    </button>
-                                </div>
-                            }
-                            else if (@Model.logInfo.status == "Closed")
-				            {
-                            }
+                <!-- Title -->
+                <div class="row pb-2">
+                    <div class="col-12 d-flex align-items-center justify-content-between">
+                        <div class="d-flex align-items-center">
+                            <h1>@Model.logInfo.centerName</h1>
                         </div>
                     </div>
-                </form>
+                </div>
 
+                <!-- Info Board -->
 				<div class="row pb-2">
 					<div class="col-lg-12 ec-info">
                         <div>
@@ -384,6 +366,26 @@
                         </table>
 					</div>
 				</div>
+
+                <!-- Close Button -->
+                <form method="POST" id="closeEC" style="padding: 0px;">
+                    <input type="hidden" name="centerLogID" value="@Model.logInfo.centerLogID" />
+                    <input type="hidden" name="disasterID" value="@Model.logInfo.disasterID" />
+                    <input type="hidden" name="centerName" value="@Model.logInfo.centerName" />
+                    <div class="row pb-2">
+                        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                            @if (@Model.logInfo.status == "Open")
+                            {
+                                <button id="completeButton" type="button" class="btn btn-danger mb-2" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal">
+                                    <i class="bi bi-x-circle pt" style="padding: 5px;"></i> Close EC
+                                </button>
+                            }
+                            else if (@Model.logInfo.status == "Closed")
+                            {
+                            }
+                        </div>
+                    </div>
+                </form>
 			</div>
 		</div>
 	</div>
