modified text alignment of description column

--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -101,7 +101,7 @@
 					<td>@counter</td>
 					<td>@item.disasterName</td>
 					<td>@item.disasterType</td>
-					<td>@item.description</td>
+					<td style="text-align:left;">@item.description</td>
 					<td>@item.dateOccured</td>
 					<td>
 						<a class="btn btn-success edit-button" href="/disaster/profile/index?disasterID=@item.disasterID">
