--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -95,7 +95,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="recordOptions">
                 <li>
-                    <a class="dropdown-item" href="/disaster/profile/report">
+                    <a class="dropdown-item" href="/disaster/profile/report?disasterID=@Model.disasterInfo.disasterID">
                         Generate Report
                     </a>
                 </li>
@@ -321,6 +321,10 @@
                 btn.toggleClass('btn-warning', hasActiveFilter);
             }
 
+            function escapeRegExp(string) {
+                return string.replace(/[.*+?^${}()|[\]\\]/g, '\\$&');
+            }
+
             column.data().unique().sort().each(function (d, j) {
                 // Only add the options "Check-in" and "Check-out" for the "Status" column
                 if (column.index() === 4) {
@@ -366,7 +370,7 @@
                     return $(this).val();
                 }).get();
 
-                column.search(selectedValues.length > 0 ? '^(' + selectedValues.join('|') + ')$' : '', true, false).draw();
+                column.search(selectedValues.length > 0 ? '^(' + selectedValues.map(escapeRegExp).join('|') + ')$' : '', true, false).draw();
                 updateFilterButton();
             });
             updateFilterButton();
