--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -156,6 +156,10 @@
 				btn.toggleClass('btn-warning', hasActiveFilter);
 			}
 
+			function escapeRegExp(string) {
+				return string.replace(/[.*+?^${}()|[\]\\]/g, '\\$&');
+			}
+
 			column.data().unique().sort().each(function (d, j) {
 				// Only add the options "Check-in" and "Check-out" for the "Status" column
 				if (column.index() === 5) {
@@ -201,7 +205,7 @@
 					return $(this).val();
 				}).get();
 
-				column.search(selectedValues.length > 0 ? '^(' + selectedValues.join('|') + ')$' : '', true, false).draw();
+				column.search(selectedValues.length > 0 ? '^(' + selectedValues.map(escapeRegExp).join('|') + ')$' : '', true, false).draw();
 				updateFilterButton();
 			});
 			updateFilterButton();
