--- a/Pages/EvacuationCenter/Profile.cshtml
+++ b/Pages/EvacuationCenter/Profile.cshtml
@@ -215,7 +215,7 @@
 				<td>@counter</td>
 				<td>@item.disasterName</td>
 				<td>@item.disasterType</td>
-				<td>@item.description</td>
+				<td style="text-align:left;">@item.description</td>
 				<td>@item.dateOccured</td>
 				<td>
 					<a class="btn btn-success edit-button" href="/disaster/profile/informationboard/index?centerLogID=@item.centerLogID">
