--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -69,6 +69,12 @@
         background-repeat: no-repeat;
         background-attachment: fixed; /* This ensures the background image stays fixed when scrolling */
     }
+
+    /* Adjust the size of the DataTable search input */
+    div.dataTables_wrapper div.dataTables_filter input {
+        width: 150px;
+        margin-right: 10px;
+    }
 </style>
 
 
