Edited the column of the Quantity of Total Packs

--- a/Pages/Disaster/Profile/reliefgoodspack/Add.cshtml
+++ b/Pages/Disaster/Profile/reliefgoodspack/Add.cshtml
@@ -42,14 +42,16 @@
 
         <!-- Pack Quantity -->
         <div class="row justify-content-center">
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <div class="mb-3">
-                    <div class="d-flex align-items-center">
-                        <label class="form-label">
+                    <div class="row align-items-center">
+                        <label class="col-7 form-label">
                             Quantity of Total Packs:
                             <span class="text-danger" style="padding: 5px">*</span>
                         </label>
-                        <input type="number" class="form-control input-pack" name="packQty" id="packQty" placeholder="0" step="1" min="0" required />
+                        <div class="col-5">
+                            <input type="number" class="form-control input-pack" name="packQty" id="packQty" placeholder="0" step="1" min="0" required />
+                        </div>
                     </div>
                 </div>
             </div>
